--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -10,3 +10,23 @@ body {
     color-scheme: dark;
   }
 }
+
+main {
+  @apply p-6  min-h-screen max-w-2xl mx-auto;
+}
+
+main h1 {
+  @apply text-4xl font-serif mb-2 font-bold;
+}
+
+button {
+  @apply px-4 py-2 text-sm font-medium rounded-2xl;
+}
+
+button.primary {
+  @apply bg-blue-500 text-white;
+}
+
+button.neutral {
+  @apply bg-gray-200;
+}
